feat: implementa teste de dominio de NFCeInvoice